--- a/aspectj4netbean2/nbproject/platform.properties
+++ b/aspectj4netbean2/nbproject/platform.properties
@@ -1,16 +1,8 @@
-# Deprecated since 5.0u1; for compatibility with 5.0:
-disabled.clusters=\
-    apisupport1,\
-    enterprise4,\
-    identity1,\
-    profiler2,\
-    visualweb1,\
-    xml1
-enabled.clusters=\
-    harness,\
-    ide8,\
-    java1,\
-    nb6.0,\
-    platform7
-nbjdk.active=JDK_1.5
-nbplatform.active=NetBeans_IDE_6.0_(Build_200711261600)
+cluster.path=\
+    ${nbplatform.active.dir}/harness:\
+    ${nbplatform.active.dir}/ide:\
+    ${nbplatform.active.dir}/java:\
+    ${nbplatform.active.dir}/nb:\
+    ${nbplatform.active.dir}/platform
+nbjdk.active=default
+nbplatform.active=default
